@@ -184,6 +184,7 @@ importFrom(magrittr,equals)
 importFrom(methods,is)
 importFrom(methods,missingArg)
 importFrom(tidyr,gather)
+importFrom(treeio,as.phylo)
 importFrom(treeio,as.treedata)
 importFrom(treeio,get.placements)
 importFrom(treeio,groupClade)
