@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.7.5
 ------------------------
+ o fortify.phylo4d via converting phylo4d to treedata object <2016-12-28, Wed>
  o improve viewClade function, use coord_cartesian instead of xlim <2016-12-28, Wed>
  o remove codes that move to treeio and now ggtree depends treeio <2016-12-20, Tue>
 
